# BuildingBlocks

./: .gitignore  README.md
COBREXA/: README.md  setup.py  uninstall.sh
Carnival/: README.md  setup.py  uninstall.sh
CarnivalPy/: README.md  setup.py  uninstall.sh
Carnival_feature_merger/: README.md  setup.py  uninstall.sh
Carnival_gex_preprocess/: README.md  setup.py  uninstall.sh
CellNOpt/: README.md  setup.py  uninstall.sh
MaBoSS/: README.md  setup.cfg  setup.py  uninstall.sh
MaBoSSG/: README.md  install.sh  setup.py  uninstall.sh
PhysiBoSS/: README.md  setup.cfg  setup.py  uninstall.sh
PhysiBoSS_Invasion/: README.md  setup.py  uninstall.sh
PhysiBoSS_invasion/: README.md  install_sc.sh  setup.py  uninstall.sh
build_model_from_species/: README.md  install_sc.sh  setup.cfg  setup.py  uninstall.sh
carnival/: README.md  setup.cfg
carnival_feature_merger/: README.md  install.sh  setup.cfg
carnival_gex_preprocess/: README.md  setup.cfg  setup.py
carnivalpy/: README.md  setup.cfg
cellnopt/: README.md  setup.cfg
cellnopt/src/cellnopt_BB/: main.py
cll_combine_models/: README.md  setup.py  uninstall.sh
cll_network_inference/: README.md  setup.py  uninstall.sh
cll_personalize_boolean_models/: README.md  setup.py  uninstall.sh
cll_prepare_data/: README.md  setup.py  uninstall.sh
cll_run_boolean_model/: README.md  setup.py  uninstall.sh
cll_tf_activities/: README.md  setup.py  uninstall.sh
export_solver_hdf5/: README.md  setup.cfg  setup.py  uninstall.sh
invasion_analysis/: README.md  setup.py  uninstall.sh
meta_analysis/: setup.py  (+3 more)
(+434 files in other folders)
