[metadata]
name = cellnopt_BB
version = 0.0.1
author = PerMedCoE Project
author_email = infoPerMedCoE@bsc.es
description = This package provides the CellNOpt Building Block.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PerMedCoE/BuildingBlocks
project_urls =
    Bug Tracker = https://github.com/PerMedCoE/BuildingBlocks/issues
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.6
install_requires = permedcoe>=0.0.1

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    cellnopt_BB = cellnopt_BB.__main__:main
